2001-09-27  Don Porter  <dgp@users.sourceforge.net>

	* doc/TCL_MEM_DEBUG.3:  Updated out-of-date reference to
	#define GUARD_SIZE.

	* doc/UpVar.3 (Tcl_UpVar*):
	* generic/tcl{Int}.decls (Tcl_UpVar*,TclFindProc,TclGetFrame):
	* generic/tclInt.h
	  (Tcl{FindProc,GetFrame,LookupVar,PrecTraceProc,ProcInterpProc}):
	* generic/tclProc.c (TclGetFrame,TclFindProc):
	* generic/tclVar.c (Tcl_UpVar*,MakeUpvar):  Updated APIs in
	generic/tclProc.c and generic/tclVar.c according to the guidelines
	of TIP 27.  [Patch 465442]

	* generic/tcl{Int}Decls.h: make genstubs

2001-09-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* doc/fileevent.n: Accepted [Patch #465279] adding an example to
	  the fileevent manpage. Minor modifications to get a better
	  formatting. Report and patch by David N. Welton
	  <davidw@users.sourceforge.net>.

	* The changes below fix [Bug #462317] where Expect tried to read
	  more than was in the buffers and then blocked in the OS call as
	  its pty channel driver provides no blockmodeproc through which
	  the OS could be notified of blocking-behaviour. Because of this
	  the general I/O core has to take more care than usual to
	  preserve the semantics of non-blocking channels.

	  The problem was reported by "Kevin O'Gorman"
	  <kevin@kosmanor.com>.

	* generic/tclIO.c (Tcl_ReadRaw): Do not read from the driver if
	  the channel is non-blocking and the fileevent causing the read
	  was generated by a timer. We do not know if there is data
	  available from the OS. Instead of going to the OS for more and
	  potentially blocking we simply signal EWOULDBLOCK to the higher
	  levels to cause the system to wait for true fileevents.
	  (GetInput): Same as before.
	  (ChannelTimerProc): Added set and clear of CHANNEL_TIMER_FEV.

	* generic/tclIO.h (CHANNEL_TIMER_FEV): New flag for channels. Is
	  set if a fileevent was generated by a timer, the channel is not
	  blocking and the driver did not provide a blockmodeproc. In that